--- a/timestamp/index.html
+++ b/timestamp/index.html
@@ -108,7 +108,7 @@
   </script>
 </head>
 <body>
-  <h1>타임스탬프 <span style="font-size: small;">(2023-07-16 19:55)</span></h1>
+  <h1>타임스탬프 <span style="font-size: small;">(2023-07-16 22:28)</span></h1>
 
   <div class="input-container">
     <label for="timestamps">타임스탬프:&nbsp;</label>
@@ -121,7 +121,7 @@
 	
 	<button onclick="adjustTimestamp()">적용</button>
   </div>
-  <textarea id="timestamps" placeholder="0:00:00	내용 (*수동 입력 시 시간과 내용 사이는 띄어쓰기가 아닌 'Tab' 입니다)" onkeydown="handleTabKey(event)"></textarea>
+  <textarea id="timestamps" placeholder="0:00:00	내용 (*수동 입력 시 '시간'과 '내용' 사이는 띄어쓰기가 아닌 'Tab' 입니다)" onkeydown="handleTabKey(event)"></textarea>
 
   <br /><br />
 
