--- a/tableslamdeck/index.html
+++ b/tableslamdeck/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Table slam Deck setting</title>
+  <meta name=viewport content="width=device-width, initial-scale=1">
   <style>
     body {
       display: flex;
