--- a/tableslamdeck/index.html
+++ b/tableslamdeck/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Table slam Deck setting</title>
+  <meta name=viewport content="width=device-width, initial-scale=1">
   <style>
     body {
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      flex-direction: column;
+      align-items: center;
       margin: 0;
       padding: 20px;
+    }
+	
+	#mainContainer {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 20px;
     }
 
     #buttonsContainer {
@@ -19,7 +27,6 @@
       gap: 10px;
     }
 	
-	/* Separate containers for each row of buttons */
     .buttonRow {
       display: flex;
       flex-direction: row;
@@ -34,46 +41,65 @@
     }
 
     #receivedDataContainer {
-      width: 400px; /* Set the width to a specific value, such as 50% of the viewport width */
+	  display:flex;
+      width: 400px;
 	  height: 400px;
       border: 1px solid #ccc;
       padding: 10px;
       background-color: #f5f5f5;
-      overflow-y: auto; /* Add back the overflow-y property to make the container scrollable */
-	  display:flex;
+      overflow-y: auto;
       flex-direction: column-reverse;
+	  
     }
 	
+	#helpLabelsContainer {
+	  display: flex;
+	  flex-direction: column;
+	  text-align: left;
+	}
 	
   </style>
 </head>
 <body>
-  <div id="buttonsContainer">
-    <button id="connectBtn" disabled>연결</button>
-	<button id="sendSetBtn" disabled>설정 값 확인</button>
-	<br>
-	<label>센서감도 설정</label>
-    <div class="buttonRow">
-	  <label for="onTime">On Time (ms):</label>
-      <input type="number" id="onTime" value="20" min="1">
-      <button id="sendOnBtn" disabled>적용</button>
-	</div>
-	<div class="buttonRow">
-	  <label for="offTime">Off Time (ms):</label>
-      <input type="number" id="offTime" value="100" min="1">
-      <button id="sendOffBtn" disabled>적용</button>
-	</div>
-	<br>
-	<label>모드 설정</label>
-	<div class="buttonRow">
-      <button style="width: 110px;" id="sendM0Btn" disabled>8 버튼</button>
-      <button style="width: 110px;" id="sendM1Btn" disabled>7 버튼+센서</button>
-	</div>
+  <div id="mainContainer">
+    <div id="buttonsContainer">
+      <button id="connectBtn" disabled>연결</button>
+      <button id="sendSetBtn" disabled>설정 값 확인</button>
+	  
+      <br>
+	  
+      <label>센서감도 설정</label>
+      <div class="buttonRow">
+        <label for="onTime">On Time (ms):</label>
+        <input type="number" id="onTime" value="20" min="1">
+        <button id="sendOnBtn" disabled>적용</button>
+      </div>
+      <div class="buttonRow">
+        <label for="offTime">Off Time (ms):</label>
+        <input type="number" id="offTime" value="100" min="1">
+        <button id="sendOffBtn" disabled>적용</button>
+      </div>
+	  
+      <br>
+	  
+      <label>모드 설정</label>
+      <div class="buttonRow">
+        <button style="width: 110px;" id="sendM0Btn" disabled>8 버튼</button>
+        <button style="width: 110px;" id="sendM1Btn" disabled>7 버튼+센서</button>
+      </div>
+    </div>
+    
+    <div id="receivedDataContainer">
+	  <button id="clearBtn" disabled>로그 삭제</button>
+      <pre id="receivedData"></pre>
+    </div>
   </div>
-
-  <div id="receivedDataContainer">
-    <button id="clearBtn" disabled>로그 삭제</button>
-    <pre id="receivedData"></pre>
+  
+  <br>
+  
+  <div id="helpLabelsContainer">
+    <label for="help">On Time 값이 작을수록 작은 충격에도 감지합니다 (센서 구슬이 떠있는 시간)</label>
+    <label for="help">Off Time 값이 작으면 이중인식이 될수도 있습니다 (해당시간동안 충격이 없어야 다시 인식합니다)</label>
   </div>
 
   <script>
