--- a/tableslamdeck/index.html
+++ b/tableslamdeck/index.html
@@ -57,6 +57,7 @@
       display: flex;
       flex-direction: column;
       text-align: left;
+      line-height: 25px;
     }
 	
     .key-buttons-container {
@@ -143,7 +144,7 @@
         <div class="key-button" data-keycode="130">F19</div>
         <div class="key-button" data-keycode="131">F20</div>
       </div>
-      <span style="text-align: right; font-size: small;">(2023-07-26 14:58)</span>
+      <span style="text-align: right; font-size: small;">(2023-07-26 15:03)</span>
     </div>
     
     <div id="receivedDataContainer">
